statefulset-litestream.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &name stalwart
  labels: {}
spec:
  replicas: 1
  serviceName: *name
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: mail-server
          image: stalwartlabs/mail-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 25
            - name: smtps
              containerPort: 465
            - name: submission
              containerPort: 587
            - name: imap
              containerPort: 143
            - name: imaps
              containerPort: 993
            - name: sieve
              containerPort: 4190
            - name: http
              containerPort: 8080
          env: []
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 512Mi
          volumeMounts:
            - name: basedir
              mountPath: /opt/stalwart-mail
            - name: mail-data
              mountPath: /opt/stalwart-mail/data
            - name: dkim
              mountPath: /opt/stalwart-mail/etc/dkim
            - name: certs
              mountPath: /opt/stalwart-mail/etc/certs
        - name: litestream
          image: litestream/litestream:latest
          args:
            - replicate
          volumeMounts: *litestreamVolumeMounts
          envFrom: *litestreamEnvFrom
          resources: *litestreamResources
          ports:
            - name: metrics
              containerPort: 9090
      restartPolicy: Always
      volumes:
        - name: basedir
          emptyDir: {}
        - name: bootstrap
          secret:
            secretName: stalwart-bootstrap
        - name: config
          configMap:
            name: stalwart
        - name: dkim
          secret:
            secretName: dkim
        - name: mail-data
          persistentVolumeClaim:
            claimName: mail-data
        - name: litestream
          configMap:
            name: litestream
        - name: certs
          secret:
            secretName: stalwart-tls
      nodeSelector: {}
      tolerations: []
  volumeClaimTemplates:
    - metadata:
        name: mail-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: standard
