service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
spec:
  selector: {}
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
    - name: smtps
      port: 465
      targetPort: smtps
    - name: submission
      port: 587
      targetPort: submission
    - name: imap
      port: 143
      targetPort: imap
    - name: imaps
      port: 993
      targetPort: imaps
    - name: sieve
      port: 4190
      targetPort: sieve
    - name: http
      port: 8080
      targetPort: http
    - name: litestream-metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
